Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19890

mdc should set obd_lu_dev before procfs entries

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      otherwise procfs handlers try to access mdc data via non-initialized pointer:

      Starting client: tmp.hr2hfJKbiU:  -o user_xattr,flock 192.168.122.172@tcp:/lustre /mnt/lustre
      [   52.865906] LustreError: 18063:0:(obd_class.h:478:obd_check_dev()) Device 26 not setup
      [   52.866277] LustreError: 18063:0:(obd_class.h:478:obd_check_dev()) Skipped 1 previous similar message
      [   52.867666] BUG: kernel NULL pointer dereference, address: 0000000000000048
      [   52.867668] #PF: supervisor read access in kernel mode
      [   52.867669] #PF: error_code(0x0000) - not-present page
      [   52.867670] PGD 107759067 P4D 107759067 PUD 160619067 PMD 0 
      [   52.867673] Oops: 0000 [#1] SMP
      [   52.867674] CPU: 2 PID: 18063 Comm: lctl Tainted: G        W  O      -------  ---  5.14.0 #17
      [   52.867676] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-8.fc42 06/10/2025
      [   52.867677] RIP: 0010:mdc_stats_seq_show+0x14/0x70 [mdc]
      [   52.867689] Code: c8 9e c0 48 c1 fa 08 e8 6a 84 7d cb 31 c0 c3 0f 1f 80 00 00 00 00 41 54 55 48 89 fd 53 48 8b 87 e0 00 00 00 31 ff 48 8b 58 10 <4c> 8b 63 48 e8 53 d4 67 cb 41 b9 01 00 00 00 b9 19 00 00 00 48 89
      [   52.867690] RSP: 0018:ffff8cdb20303d68 EFLAGS: 00010246
      [   52.867691] RAX: ffff8cdb1e15a180 RBX: 0000000000000000 RCX: 0000000000000001
      [   52.867692] RDX: 0000000000001000 RSI: 0000000000000001 RDI: 0000000000000000
      [   52.867692] RBP: ffff8cdac14bcb90 R08: 0000000000400cc0 R09: 00000000ffffffff
      [   52.867693] R10: ffffffff8c2ddb37 R11: 0000000000000000 R12: ffff8cdb20303e18
      [   52.867693] R13: ffff8cdb20303df0 R14: ffff8cdac14bcbb8 R15: 0000000000000001
      [   52.869981] FS:  00007fd7eee7e940(0000) GS:ffff8cdc2f500000(0000) knlGS:0000000000000000
      [   52.869985] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [   52.869986] CR2: 0000000000000048 CR3: 0000000162dea000 CR4: 0000000000350eb0
      [   52.869988] Call Trace:
      [   52.869992]  <TASK>
      [   52.870023]  seq_read_iter+0x100/0x460
      [   52.870026]  seq_read+0x131/0x160
      [   52.870028]  full_proxy_read+0x4b/0x70
      [   52.870040]  vfs_read+0x8e/0x3b0
      [   52.870045]  ksys_read+0x50/0xc0
      [   52.870046]  do_syscall_64+0x38/0xe0
      
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: