LU-19890 mdc: initialize obd_lu_dev before procfs entries

1) initialize obd_lu_dev early, before procfs entries
   to prevent access via non-initialized mdc data via
   procfs entries
2) remove procfs entries before any mdc structures
   the entries can access

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: Ib2a70ea404ab10b9d978c80c25774502f85aa2be
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64102
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Timothy Day <timday@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>